fix overflow hidden in sticky footer

--- a/app/assets/styles/tools/mixins.styl
+++ b/app/assets/styles/tools/mixins.styl
@@ -13,7 +13,6 @@ sticky-footer(pagewrap, footer, footerHeight)
 
   {pagewrap}
     clearfix()
-    overflow hidden
     min-height 100%
     margin-bottom -(footerHeight)
     &:after
